--- a/userPage/detailproduk.html
+++ b/userPage/detailproduk.html
@@ -224,7 +224,7 @@
                                 <div class="row mt-3">
                                     <div class="col-md-4 mt-3">
                                         <div class="card">
-                                            <img src="image/produk1.jpeg" class="card-img-top" alt="Produk 1">
+                                            <img src="image/produk1.jpeg" class="card-img-top" height="180" alt="Produk 1">
                                             <div class="card-body">
                                                 <h4 class="card-title"><a href="detailproduk.html">Produk 1</a></h4>
                                                 <p class="card-text">Rp.100.000,00</p>
@@ -235,7 +235,7 @@
                                     </div>
                                     <div class="col-md-4 mt-3">
                                         <div class="card">
-                                            <img src="image/prouduk2.jpg" class="card-img-top" alt="Produk 2">
+                                            <img src="image/prouduk2.jpg" class="card-img-top" height="180" alt="Produk 2">
                                             <div class="card-body">
                                                 <h4 class="card-title"><a href="detailproduk.html">Produk 1</a></h4>
                                                 <p class="card-text">Rp.100.000,00</p>
@@ -246,7 +246,7 @@
                                     </div>
                                     <div class="col-md-4 mt-3">
                                         <div class="card">
-                                            <img src="image/produk3.jpeg" class="card-img-top" alt="Produk 3">
+                                            <img src="image/produk3.jpeg" class="card-img-top" height="180" alt="Produk 3">
                                             <div class="card-body">
                                                 <h4 class="card-title"><a href="detailproduk.html">Produk 1</a></h4>
                                                 <p class="card-text">Rp.100.000,00</p>
@@ -257,7 +257,7 @@
                                     </div>
                                     <div class="col-md-4 mt-3">
                                         <div class="card">
-                                            <img src="image/produk1.jpeg" class="card-img-top" alt="Produk 1">
+                                            <img src="image/produk1.jpeg" class="card-img-top" height="180" alt="Produk 1">
                                             <div class="card-body">
                                                 <h4 class="card-title"><a href="detailproduk.html">Produk 1</a></h4>
                                                 <p class="card-text">Rp.100.000,00</p>
@@ -268,7 +268,7 @@
                                     </div>
                                     <div class="col-md-4 mt-3">
                                         <div class="card">
-                                            <img src="image/prouduk2.jpg" class="card-img-top" alt="Produk 2">
+                                            <img src="image/prouduk2.jpg" class="card-img-top" height="180" alt="Produk 2">
                                             <div class="card-body">
                                                 <h4 class="card-title"><a href="detailproduk.html">Produk 1</a></h4>
                                                 <p class="card-text">Rp.100.000,00</p>
@@ -279,7 +279,7 @@
                                     </div>
                                     <div class="col-md-4 mt-3">
                                         <div class="card">
-                                            <img src="image/produk3.jpeg" class="card-img-top" alt="Produk 3">
+                                            <img src="image/produk3.jpeg" class="card-img-top" height="180" alt="Produk 3">
                                             <div class="card-body">
                                                 <h4 class="card-title"><a href="detailproduk.html">Produk 1</a></h4>
                                                 <p class="card-text">Rp.100.000,00</p>
@@ -290,7 +290,7 @@
                                     </div>
                                     <div class="col-md-4 mt-3">
                                         <div class="card">
-                                            <img src="image/produk1.jpeg" class="card-img-top" alt="Produk 1">
+                                            <img src="image/produk1.jpeg" class="card-img-top" height="180" alt="Produk 1">
                                             <div class="card-body">
                                                 <h4 class="card-title"><a href="detailproduk.html">Produk 1</a></h4>
                                                 <p class="card-text">Rp.100.000,00</p>
@@ -301,7 +301,7 @@
                                     </div>
                                     <div class="col-md-4 mt-3">
                                         <div class="card">
-                                            <img src="image/prouduk2.jpg" class="card-img-top" alt="Produk 2">
+                                            <img src="image/prouduk2.jpg" class="card-img-top" height="180" alt="Produk 2">
                                             <div class="card-body">
                                                 <h4 class="card-title"><a href="detailproduk.html">Produk 1</a></h4>
                                                 <p class="card-text">Rp.100.000,00</p>
@@ -312,7 +312,7 @@
                                     </div>
                                     <div class="col-md-4 mt-3">
                                         <div class="card">
-                                            <img src="image/produk3.jpeg" class="card-img-top" alt="Produk 3">
+                                            <img src="image/produk3.jpeg" class="card-img-top" height="180" alt="Produk 3">
                                             <div class="card-body">
                                                 <h4 class="card-title"><a href="detailproduk.html">Produk 1</a></h4>
                                                 <p class="card-text">Rp.100.000,00</p>
@@ -323,7 +323,7 @@
                                     </div>
                                     <div class="col-md-4 mt-3">
                                         <div class="card">
-                                            <img src="image/produk1.jpeg" class="card-img-top" alt="Produk 1">
+                                            <img src="image/produk1.jpeg" class="card-img-top" height="180" alt="Produk 1">
                                             <div class="card-body">
                                                 <h4 class="card-title"><a href="detailproduk.html">Produk 1</a></h4>
                                                 <p class="card-text">Rp.100.000,00</p>
@@ -334,7 +334,7 @@
                                     </div>
                                     <div class="col-md-4 mt-3">
                                         <div class="card">
-                                            <img src="image/prouduk2.jpg" class="card-img-top" alt="Produk 2">
+                                            <img src="image/prouduk2.jpg" class="card-img-top" height="180" alt="Produk 2">
                                             <div class="card-body">
                                                 <h4 class="card-title"><a href="detailproduk.html">Produk 1</a></h4>
                                                 <p class="card-text">Rp.100.000,00</p>
@@ -345,7 +345,7 @@
                                     </div>
                                     <div class="col-md-4 mt-3">
                                         <div class="card">
-                                            <img src="image/produk3.jpeg" class="card-img-top" alt="Produk 3">
+                                            <img src="image/produk3.jpeg" class="card-img-top" height="180" alt="Produk 3">
                                             <div class="card-body">
                                                 <h4 class="card-title"><a href="detailproduk.html">Produk 1</a></h4>
                                                 <p class="card-text">Rp.100.000,00</p>
