--- a/userPage/history.html
+++ b/userPage/history.html
@@ -107,7 +107,7 @@
                             <div class="row mt-3">
                                 <div class="col-md-4 mt-3">
                                     <div class="card">
-                                        <img src="image/produk1.jpeg" class="card-img-top" alt="Produk 1">
+                                        <img src="image/produk1.jpeg" class="card-img-top" height="180" alt="Produk 1">
                                         <div class="card-body">
                                             <h4 class="card-title"><a href="detailproduk.html">Produk 1</a></h4>
                                         </div>
@@ -115,7 +115,7 @@
                                 </div>
                                 <div class="col-md-4 mt-3">
                                     <div class="card">
-                                        <img src="image/prouduk2.jpg" class="card-img-top" alt="Produk 2">
+                                        <img src="image/prouduk2.jpg" class="card-img-top" height="180" alt="Produk 2">
                                         <div class="card-body">
                                             <h4 class="card-title"><a href="detailproduk.html">Produk 1</a></h4>
                                         </div>
@@ -123,7 +123,7 @@
                                 </div>
                                 <div class="col-md-4 mt-3">
                                     <div class="card">
-                                        <img src="image/produk3.jpeg" class="card-img-top" alt="Produk 3">
+                                        <img src="image/produk3.jpeg" class="card-img-top" height="180" alt="Produk 3">
                                         <div class="card-body">
                                             <h4 class="card-title"><a href="detailproduk.html">Produk 1</a></h4>
                                         </div>
