--- a/userPage/index.html
+++ b/userPage/index.html
@@ -139,7 +139,7 @@
                             <div class="row mt-3">
                                 <div class="col-md-4 mt-3">
                                     <div class="card">
-                                        <img src="image/produk1.jpeg" class="card-img-top" alt="Produk 1">
+                                        <img src="image/produk1.jpeg" class="card-img-top" height="180" alt="Produk 1">
                                         <div class="card-body">
                                             <h4 class="card-title"><a href="detailproduk.html">Produk 1</a></h4>
                                             <p class="card-text">Rp.100.000,00</p>
@@ -150,7 +150,7 @@
                                 </div>
                                 <div class="col-md-4 mt-3">
                                     <div class="card">
-                                        <img src="image/prouduk2.jpg" class="card-img-top" alt="Produk 2">
+                                        <img src="image/prouduk2.jpg" class="card-img-top" height="180" alt="Produk 2">
                                         <div class="card-body">
                                             <h4 class="card-title"><a href="detailproduk.html">Produk 1</a></h4>
                                             <p class="card-text">Rp.100.000,00</p>
@@ -161,7 +161,7 @@
                                 </div>
                                 <div class="col-md-4 mt-3">
                                     <div class="card">
-                                        <img src="image/produk3.jpeg" class="card-img-top" alt="Produk 3">
+                                        <img src="image/produk3.jpeg" class="card-img-top" height="180" alt="Produk 3">
                                         <div class="card-body">
                                             <h4 class="card-title"><a href="detailproduk.html">Produk 1</a></h4>
                                             <p class="card-text">Rp.100.000,00</p>
@@ -172,7 +172,7 @@
                                 </div>
                                 <div class="col-md-4 mt-3">
                                     <div class="card">
-                                        <img src="image/produk1.jpeg" class="card-img-top" alt="Produk 1">
+                                        <img src="image/produk1.jpeg" class="card-img-top" height="180" alt="Produk 1">
                                         <div class="card-body">
                                             <h4 class="card-title"><a href="detailproduk.html">Produk 1</a></h4>
                                             <p class="card-text">Rp.100.000,00</p>
@@ -183,7 +183,7 @@
                                 </div>
                                 <div class="col-md-4 mt-3">
                                     <div class="card">
-                                        <img src="image/prouduk2.jpg" class="card-img-top" alt="Produk 2">
+                                        <img src="image/prouduk2.jpg" class="card-img-top" height="180" alt="Produk 2">
                                         <div class="card-body">
                                             <h4 class="card-title"><a href="detailproduk.html">Produk 1</a></h4>
                                             <p class="card-text">Rp.100.000,00</p>
@@ -194,7 +194,7 @@
                                 </div>
                                 <div class="col-md-4 mt-3">
                                     <div class="card">
-                                        <img src="image/produk3.jpeg" class="card-img-top" alt="Produk 3">
+                                        <img src="image/produk3.jpeg" class="card-img-top" height="180" alt="Produk 3">
                                         <div class="card-body">
                                             <h4 class="card-title"><a href="detailproduk.html">Produk 1</a></h4>
                                             <p class="card-text">Rp.100.000,00</p>
@@ -205,7 +205,7 @@
                                 </div>
                                 <div class="col-md-4 mt-3">
                                     <div class="card">
-                                        <img src="image/produk1.jpeg" class="card-img-top" alt="Produk 1">
+                                        <img src="image/produk1.jpeg" class="card-img-top" height="180" alt="Produk 1">
                                         <div class="card-body">
                                             <h4 class="card-title"><a href="detailproduk.html">Produk 1</a></h4>
                                             <p class="card-text">Rp.100.000,00</p>
@@ -216,7 +216,7 @@
                                 </div>
                                 <div class="col-md-4 mt-3">
                                     <div class="card">
-                                        <img src="image/prouduk2.jpg" class="card-img-top" alt="Produk 2">
+                                        <img src="image/prouduk2.jpg" class="card-img-top" height="180" alt="Produk 2">
                                         <div class="card-body">
                                             <h4 class="card-title"><a href="detailproduk.html">Produk 1</a></h4>
                                             <p class="card-text">Rp.100.000,00</p>
@@ -227,7 +227,7 @@
                                 </div>
                                 <div class="col-md-4 mt-3">
                                     <div class="card">
-                                        <img src="image/produk3.jpeg" class="card-img-top" alt="Produk 3">
+                                        <img src="image/produk3.jpeg" class="card-img-top" height="180" alt="Produk 3">
                                         <div class="card-body">
                                             <h4 class="card-title"><a href="detailproduk.html">Produk 1</a></h4>
                                             <p class="card-text">Rp.100.000,00</p>
@@ -238,7 +238,7 @@
                                 </div>
                                 <div class="col-md-4 mt-3">
                                     <div class="card">
-                                        <img src="image/produk1.jpeg" class="card-img-top" alt="Produk 1">
+                                        <img src="image/produk1.jpeg" class="card-img-top" height="180" alt="Produk 1">
                                         <div class="card-body">
                                             <h4 class="card-title"><a href="detailproduk.html">Produk 1</a></h4>
                                             <p class="card-text">Rp.100.000,00</p>
@@ -249,7 +249,7 @@
                                 </div>
                                 <div class="col-md-4 mt-3">
                                     <div class="card">
-                                        <img src="image/prouduk2.jpg" class="card-img-top" alt="Produk 2">
+                                        <img src="image/prouduk2.jpg" class="card-img-top" height="180" alt="Produk 2">
                                         <div class="card-body">
                                             <h4 class="card-title"><a href="detailproduk.html">Produk 1</a></h4>
                                             <p class="card-text">Rp.100.000,00</p>
@@ -260,7 +260,7 @@
                                 </div>
                                 <div class="col-md-4 mt-3">
                                     <div class="card">
-                                        <img src="image/produk3.jpeg" class="card-img-top" alt="Produk 3">
+                                        <img src="image/produk3.jpeg" class="card-img-top" height="180" alt="Produk 3">
                                         <div class="card-body">
                                             <h4 class="card-title"><a href="detailproduk.html">Produk 1</a></h4>
                                             <p class="card-text">Rp.100.000,00</p>
