--- a/userPage/produkBygenre.html
+++ b/userPage/produkBygenre.html
@@ -116,7 +116,7 @@
                             <div class="row mt-3">
                                 <div class="col-md-4 mt-3">
                                     <div class="card">
-                                        <img src="image/produk1.jpeg" class="card-img-top" alt="Produk 1">
+                                        <img src="image/produk1.jpeg" class="card-img-top" height="180" alt="Produk 1">
                                         <div class="card-body">
                                             <h4 class="card-title"><a href="detailproduk.html">Produk 1</a></h4>
                                             <p class="card-text">Rp.100.000,00</p>
@@ -127,7 +127,7 @@
                                 </div>
                                 <div class="col-md-4 mt-3">
                                     <div class="card">
-                                        <img src="image/prouduk2.jpg" class="card-img-top" alt="Produk 2">
+                                        <img src="image/prouduk2.jpg" class="card-img-top" height="180" alt="Produk 2">
                                         <div class="card-body">
                                             <h4 class="card-title"><a href="detailproduk.html">Produk 1</a></h4>
                                             <p class="card-text">Rp.100.000,00</p>
@@ -138,7 +138,7 @@
                                 </div>
                                 <div class="col-md-4 mt-3">
                                     <div class="card">
-                                        <img src="image/produk3.jpeg" class="card-img-top" alt="Produk 3">
+                                        <img src="image/produk3.jpeg" class="card-img-top" height="180" alt="Produk 3">
                                         <div class="card-body">
                                             <h4 class="card-title"><a href="detailproduk.html">Produk 1</a></h4>
                                             <p class="card-text">Rp.100.000,00</p>
@@ -149,7 +149,7 @@
                                 </div>
                                 <div class="col-md-4 mt-3">
                                     <div class="card">
-                                        <img src="image/produk1.jpeg" class="card-img-top" alt="Produk 1">
+                                        <img src="image/produk1.jpeg" class="card-img-top" height="180" alt="Produk 1">
                                         <div class="card-body">
                                             <h4 class="card-title"><a href="detailproduk.html">Produk 1</a></h4>
                                             <p class="card-text">Rp.100.000,00</p>
@@ -160,7 +160,7 @@
                                 </div>
                                 <div class="col-md-4 mt-3">
                                     <div class="card">
-                                        <img src="image/prouduk2.jpg" class="card-img-top" alt="Produk 2">
+                                        <img src="image/prouduk2.jpg" class="card-img-top" height="180" alt="Produk 2">
                                         <div class="card-body">
                                             <h4 class="card-title"><a href="detailproduk.html">Produk 1</a></h4>
                                             <p class="card-text">Rp.100.000,00</p>
@@ -171,7 +171,7 @@
                                 </div>
                                 <div class="col-md-4 mt-3">
                                     <div class="card">
-                                        <img src="image/produk3.jpeg" class="card-img-top" alt="Produk 3">
+                                        <img src="image/produk3.jpeg" class="card-img-top" height="180" alt="Produk 3">
                                         <div class="card-body">
                                             <h4 class="card-title"><a href="detailproduk.html">Produk 1</a></h4>
                                             <p class="card-text">Rp.100.000,00</p>
@@ -182,7 +182,7 @@
                                 </div>
                                 <div class="col-md-4 mt-3">
                                     <div class="card">
-                                        <img src="image/produk1.jpeg" class="card-img-top" alt="Produk 1">
+                                        <img src="image/produk1.jpeg" class="card-img-top" height="180" alt="Produk 1">
                                         <div class="card-body">
                                             <h4 class="card-title"><a href="detailproduk.html">Produk 1</a></h4>
                                             <p class="card-text">Rp.100.000,00</p>
@@ -193,7 +193,7 @@
                                 </div>
                                 <div class="col-md-4 mt-3">
                                     <div class="card">
-                                        <img src="image/prouduk2.jpg" class="card-img-top" alt="Produk 2">
+                                        <img src="image/prouduk2.jpg" class="card-img-top" height="180" alt="Produk 2">
                                         <div class="card-body">
                                             <h4 class="card-title"><a href="detailproduk.html">Produk 1</a></h4>
                                             <p class="card-text">Rp.100.000,00</p>
@@ -204,7 +204,7 @@
                                 </div>
                                 <div class="col-md-4 mt-3">
                                     <div class="card">
-                                        <img src="image/produk3.jpeg" class="card-img-top" alt="Produk 3">
+                                        <img src="image/produk3.jpeg" class="card-img-top" height="180" alt="Produk 3">
                                         <div class="card-body">
                                             <h4 class="card-title"><a href="detailproduk.html">Produk 1</a></h4>
                                             <p class="card-text">Rp.100.000,00</p>
@@ -215,7 +215,7 @@
                                 </div>
                                 <div class="col-md-4 mt-3">
                                     <div class="card">
-                                        <img src="image/produk1.jpeg" class="card-img-top" alt="Produk 1">
+                                        <img src="image/produk1.jpeg" class="card-img-top" height="180" alt="Produk 1">
                                         <div class="card-body">
                                             <h4 class="card-title"><a href="detailproduk.html">Produk 1</a></h4>
                                             <p class="card-text">Rp.100.000,00</p>
@@ -226,7 +226,7 @@
                                 </div>
                                 <div class="col-md-4 mt-3">
                                     <div class="card">
-                                        <img src="image/prouduk2.jpg" class="card-img-top" alt="Produk 2">
+                                        <img src="image/prouduk2.jpg" class="card-img-top" height="180" alt="Produk 2">
                                         <div class="card-body">
                                             <h4 class="card-title"><a href="detailproduk.html">Produk 1</a></h4>
                                             <p class="card-text">Rp.100.000,00</p>
@@ -237,7 +237,7 @@
                                 </div>
                                 <div class="col-md-4 mt-3">
                                     <div class="card">
-                                        <img src="image/produk3.jpeg" class="card-img-top" alt="Produk 3">
+                                        <img src="image/produk3.jpeg" class="card-img-top" height="180" alt="Produk 3">
                                         <div class="card-body">
                                             <h4 class="card-title"><a href="detailproduk.html">Produk 1</a></h4>
                                             <p class="card-text">Rp.100.000,00</p>
