change color,add payment page

--- a/userPage/beli.html
+++ b/userPage/beli.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg bg-hijau navbar-dark sticky-top">
+    <nav class="navbar navbar-expand-lg bg-warning navbar-dark sticky-top">
         <div class="container">
             <a class="navbar-brand" href="#"><b>Tokoku</b></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
@@ -27,7 +27,7 @@
                 <div class="ms-auto d-none d-lg-block">
                     <form class="d-flex" role="search">
                         <input class="form-control me-2" type="search" placeholder="Cari Produk..." aria-label="Search">
-                        <!-- <button class="btn btn-outline-success" type="submit">Search</button> -->
+                        <!-- <button class="btn btn-outline-warningbtn-warning" type="submit">Search</button> -->
                     </form>
 
                 </div>
@@ -112,7 +112,9 @@
                                 <p>Rp.210.000,00</p>
                             </li>
                             <div class="mt-4">
-                                <button class="btn btn-success w-100">Check Out</button>
+                                <a href="payment.html">
+                                    <button class="btn btn-warning w-100">Check Out</button>
+                                </a>
                             </div>
                         </ul>
                     </div>
