--- a/userPage/detailproduk.html
+++ b/userPage/detailproduk.html
@@ -46,7 +46,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg bg-hijau navbar-dark sticky-top">
+    <nav class="navbar navbar-expand-lg bg-warning navbar-dark sticky-top">
         <div class="container">
             <a class="navbar-brand" href="#"><b>Tokoku</b></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
@@ -57,7 +57,7 @@
                 <div class="ms-auto d-none d-lg-block">
                     <form class="d-flex" role="search">
                         <input class="form-control me-2" type="search" placeholder="Cari Produk..." aria-label="Search">
-                        <!-- <button class="btn btn-outline-success" type="submit">Search</button> -->
+                        <!-- <button class="btn btn-outline-warning" type="submit">Search</button> -->
                     </form>
 
                 </div>
@@ -109,18 +109,18 @@
                                     <h4>kaos import lengan pendek pria | baju pria import polos kaos - Putih</h4>
                                     <p>Terjual 50 </p>
                                     <div class="mt-3">
-                                        <a class="btn btn-sm btn-success" href="https://wa.me"><i class="bi bi-whatsapp me-1"></i>Tanya Penjual</a>
+                                        <a class="btn btn-sm btn-warning text-white" href="https://wa.me"><i class="bi bi-whatsapp me-1 "></i>Tanya Penjual</a>
                                     </div>
                                     <h6 class="pt-4">Rp.100.000,00</h6>
                                     <div class="mt-4">
                                         <ul class="nav nav-tabs" id="myTab" role="tablist">
                                             <li class="nav-item" role="presentation">
-                                                <button class="nav-link text-success  active" id="detail-tab" data-bs-toggle="tab"
+                                                <button class="nav-link text-primary  active" id="detail-tab" data-bs-toggle="tab"
                                                     data-bs-target="#detail-tab-pane" type="button" role="tab"
                                                     aria-controls="detail-tab-pane" aria-selected="true">Detail</button>
                                             </li>
                                             <li class="nav-item" role="presentation">
-                                                <button class="nav-link text-success " id="info-tab" data-bs-toggle="tab"
+                                                <button class="nav-link text-primary " id="info-tab" data-bs-toggle="tab"
                                                     data-bs-target="#info-tab-pane" type="button" role="tab"
                                                     aria-controls="info-tab-pane"
                                                     aria-selected="false">Info penting</button>
@@ -141,8 +141,8 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-12 col-md-3 mt-2">
-                                    <div class="card border-success mb-3" >
+                                <div class="cohijaul-12 col-md-3 mt-2">
+                                    <div class="card border-warning mb-3" >
                                         <div class="card-header mb-4">
                                             <h6><b>Atur jumlah dan catatan</b></h6>
                                             <p class="">Stok : <b>100</b></p>
@@ -161,7 +161,7 @@
                                                     </div>
                                                 </div>
                                                 <div class="mt-3">
-                                                    <a href="beli.html" class="btn btn-success w-100"><i class="bi bi-plus-lg me-1"></i>Beli</a>
+                                                    <a href="beli.html" class="btn btn-warning w-100"><i class="bi bi-plus-lg me-1"></i>Beli</a>
                                                 </div>
                                             </form>
                                         </div>
@@ -226,9 +226,9 @@
                                         <div class="card">
                                             <img src="image/produk1.jpeg" class="card-img-top" height="180" alt="Produk 1">
                                             <div class="card-body">
-                                                <h4 class="card-title"><a href="detailproduk.html">Produk 1</a></h4>
+                                                <h4 class="card-title"><a href="detailproduk.html" class="text-decoration-none text-dark">Produk 1</a></h4>
                                                 <p class="card-text">Rp.100.000,00</p>
-                                                <a href="beli.html" class="btn btn-success w-100"><i
+                                                <a href="beli.html" class="btn btn-warning w-100 text-white"><i
                                                         class="bi bi-bag-plus-fill me-1"></i>Beli</a>
                                             </div>
                                         </div>
@@ -237,9 +237,9 @@
                                         <div class="card">
                                             <img src="image/prouduk2.jpg" class="card-img-top" height="180" alt="Produk 2">
                                             <div class="card-body">
-                                                <h4 class="card-title"><a href="detailproduk.html">Produk 1</a></h4>
+                                                <h4 class="card-title"><a href="detailproduk.html" class="text-decoration-none text-dark">Produk 1</a></h4>
                                                 <p class="card-text">Rp.100.000,00</p>
-                                                <a href="beli.html" class="btn btn-success w-100"><i
+                                                <a href="beli.html" class="btn btn-warning w-100 text-white"><i
                                                         class="bi bi-bag-plus-fill me-1"></i>Beli</a>
                                             </div>
                                         </div>
@@ -248,9 +248,9 @@
                                         <div class="card">
                                             <img src="image/produk3.jpeg" class="card-img-top" height="180" alt="Produk 3">
                                             <div class="card-body">
-                                                <h4 class="card-title"><a href="detailproduk.html">Produk 1</a></h4>
+                                                <h4 class="card-title"><a href="detailproduk.html" class="text-decoration-none text-dark">Produk 1</a></h4>
                                                 <p class="card-text">Rp.100.000,00</p>
-                                                <a href="beli.html" class="btn btn-success w-100"><i
+                                                <a href="beli.html" class="btn btn-warning w-100 text-white"><i
                                                         class="bi bi-bag-plus-fill me-1"></i>Beli</a>
                                             </div>
                                         </div>
@@ -259,9 +259,9 @@
                                         <div class="card">
                                             <img src="image/produk1.jpeg" class="card-img-top" height="180" alt="Produk 1">
                                             <div class="card-body">
-                                                <h4 class="card-title"><a href="detailproduk.html">Produk 1</a></h4>
+                                                <h4 class="card-title"><a href="detailproduk.html" class="text-decoration-none text-dark">Produk 1</a></h4>
                                                 <p class="card-text">Rp.100.000,00</p>
-                                                <a href="beli.html" class="btn btn-success w-100"><i
+                                                <a href="beli.html" class="btn btn-warning w-100 text-white"><i
                                                         class="bi bi-bag-plus-fill me-1"></i>Beli</a>
                                             </div>
                                         </div>
@@ -270,9 +270,9 @@
                                         <div class="card">
                                             <img src="image/prouduk2.jpg" class="card-img-top" height="180" alt="Produk 2">
                                             <div class="card-body">
-                                                <h4 class="card-title"><a href="detailproduk.html">Produk 1</a></h4>
+                                                <h4 class="card-title"><a href="detailproduk.html" class="text-decoration-none text-dark">Produk 1</a></h4>
                                                 <p class="card-text">Rp.100.000,00</p>
-                                                <a href="beli.html" class="btn btn-success w-100"><i
+                                                <a href="beli.html" class="btn btn-warning w-100 text-white"><i
                                                         class="bi bi-bag-plus-fill me-1"></i>Beli</a>
                                             </div>
                                         </div>
@@ -281,9 +281,9 @@
                                         <div class="card">
                                             <img src="image/produk3.jpeg" class="card-img-top" height="180" alt="Produk 3">
                                             <div class="card-body">
-                                                <h4 class="card-title"><a href="detailproduk.html">Produk 1</a></h4>
+                                                <h4 class="card-title"><a href="detailproduk.html" class="text-decoration-none text-dark">Produk 1</a></h4>
                                                 <p class="card-text">Rp.100.000,00</p>
-                                                <a href="beli.html" class="btn btn-success w-100"><i
+                                                <a href="beli.html" class="btn btn-warning w-100 text-white"><i
                                                         class="bi bi-bag-plus-fill me-1"></i>Beli</a>
                                             </div>
                                         </div>
@@ -292,9 +292,9 @@
                                         <div class="card">
                                             <img src="image/produk1.jpeg" class="card-img-top" height="180" alt="Produk 1">
                                             <div class="card-body">
-                                                <h4 class="card-title"><a href="detailproduk.html">Produk 1</a></h4>
+                                                <h4 class="card-title"><a href="detailproduk.html" class="text-decoration-none text-dark">Produk 1</a></h4>
                                                 <p class="card-text">Rp.100.000,00</p>
-                                                <a href="beli.html" class="btn btn-success w-100"><i
+                                                <a href="beli.html" class="btn btn-warning w-100 text-white"><i
                                                         class="bi bi-bag-plus-fill me-1"></i>Beli</a>
                                             </div>
                                         </div>
@@ -303,9 +303,9 @@
                                         <div class="card">
                                             <img src="image/prouduk2.jpg" class="card-img-top" height="180" alt="Produk 2">
                                             <div class="card-body">
-                                                <h4 class="card-title"><a href="detailproduk.html">Produk 1</a></h4>
+                                                <h4 class="card-title"><a href="detailproduk.html" class="text-decoration-none text-dark">Produk 1</a></h4>
                                                 <p class="card-text">Rp.100.000,00</p>
-                                                <a href="beli.html" class="btn btn-success w-100"><i
+                                                <a href="beli.html" class="btn btn-warning w-100 text-white"><i
                                                         class="bi bi-bag-plus-fill me-1"></i>Beli</a>
                                             </div>
                                         </div>
@@ -314,9 +314,9 @@
                                         <div class="card">
                                             <img src="image/produk3.jpeg" class="card-img-top" height="180" alt="Produk 3">
                                             <div class="card-body">
-                                                <h4 class="card-title"><a href="detailproduk.html">Produk 1</a></h4>
+                                                <h4 class="card-title"><a href="detailproduk.html" class="text-decoration-none text-dark">Produk 1</a></h4>
                                                 <p class="card-text">Rp.100.000,00</p>
-                                                <a href="beli.html" class="btn btn-success w-100"><i
+                                                <a href="beli.html" class="btn btn-warning w-100 text-white"><i
                                                         class="bi bi-bag-plus-fill me-1"></i>Beli</a>
                                             </div>
                                         </div>
@@ -325,9 +325,9 @@
                                         <div class="card">
                                             <img src="image/produk1.jpeg" class="card-img-top" height="180" alt="Produk 1">
                                             <div class="card-body">
-                                                <h4 class="card-title"><a href="detailproduk.html">Produk 1</a></h4>
+                                                <h4 class="card-title"><a href="detailproduk.html" class="text-decoration-none text-dark">Produk 1</a></h4>
                                                 <p class="card-text">Rp.100.000,00</p>
-                                                <a href="beli.html" class="btn btn-success w-100"><i
+                                                <a href="beli.html" class="btn btn-warning w-100 text-white"><i
                                                         class="bi bi-bag-plus-fill me-1"></i>Beli</a>
                                             </div>
                                         </div>
@@ -336,9 +336,9 @@
                                         <div class="card">
                                             <img src="image/prouduk2.jpg" class="card-img-top" height="180" alt="Produk 2">
                                             <div class="card-body">
-                                                <h4 class="card-title"><a href="detailproduk.html">Produk 1</a></h4>
+                                                <h4 class="card-title"><a href="detailproduk.html" class="text-decoration-none text-dark">Produk 1</a></h4>
                                                 <p class="card-text">Rp.100.000,00</p>
-                                                <a href="beli.html" class="btn btn-success w-100"><i
+                                                <a href="beli.html" class="btn btn-warning w-100 text-white"><i
                                                         class="bi bi-bag-plus-fill me-1"></i>Beli</a>
                                             </div>
                                         </div>
@@ -347,9 +347,9 @@
                                         <div class="card">
                                             <img src="image/produk3.jpeg" class="card-img-top" height="180" alt="Produk 3">
                                             <div class="card-body">
-                                                <h4 class="card-title"><a href="detailproduk.html">Produk 1</a></h4>
+                                                <h4 class="card-title"><a href="detailproduk.html" class="text-decoration-none text-dark">Produk 1</a></h4>
                                                 <p class="card-text">Rp.100.000,00</p>
-                                                <a href="beli.html" class="btn btn-success w-100"><i
+                                                <a href="beli.html" class="btn btn-warning w-100 text-white"><i
                                                         class="bi bi-bag-plus-fill me-1"></i>Beli</a>
                                             </div>
                                         </div>
