--- a/userPage/forgot-password.html
+++ b/userPage/forgot-password.html
@@ -33,7 +33,7 @@
             font-size: 16px;
         }
 
-        .forgot-password-container .btn-success {
+        .forgot-password-container .btn-warning {
             width: 100%;
             height: 50px;
             font-size: 18px;
@@ -50,7 +50,7 @@
                 <div class="form-group">
                     <input type="email" class="form-control" id="email" placeholder="Email">
                 </div>
-                <button type="submit" class="btn btn-success">Reset Password</button>
+                <button type="submit" class="btn btn-warning">Reset Password</button>
             </form>
         </div>
     </div>
