--- a/userPage/pesanan.html
+++ b/userPage/pesanan.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg bg-hijau navbar-dark sticky-top">
+    <nav class="navbar navbar-expand-lg bg-warning navbar-dark sticky-top">
         <div class="container">
             <a class="navbar-brand" href="#"><b>Tokoku</b></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
@@ -70,28 +70,28 @@
                                 <li class="list-group-item d-flex justify-content-between align-items-start">
                                     <div class="me-auto">
                                         <div class="">
-                                            <a href="profileSetting.html" class="text-decoration-none text-dark"><i class="bi bi-person-gear text-success"></i> Profile Settings</a>
+                                            <a href="profile.html" class="text-decoration-none text-dark"><i class="bi bi-person-gear text-primary"></i> Profile Settings</a>
                                         </div>
                                     </div>
                                 </li>
                                 <li class="list-group-item d-flex justify-content-between align-items-start">
                                     <div class="me-auto">
                                         <div class="">
-                                            <a href="ubahPassword.html" class="text-decoration-none text-dark"><i class="bi bi-shield-lock-fill text-success"></i> Keamanan</a>
+                                            <a href="ubahPassword.html" class="text-decoration-none text-dark"><i class="bi bi-shield-lock-fill text-primary"></i> Keamanan</a>
                                         </div>
                                     </div>
                                 </li>
                                 <li class="list-group-item d-flex justify-content-between align-items-start">
                                     <div class="me-auto">
                                         <div class="">
-                                            <a href="pesanan.html" class="text-decoration-none text-dark"><i class="bi bi-cart-fill text-success"></i> Pesanan Saya</a>
+                                            <a href="pesanan.html" class="text-decoration-none text-dark"><i class="bi bi-cart-fill text-primary"></i> Pesanan Saya</a>
                                         </div>
                                     </div>
                                 </li>
                                 <li class="list-group-item d-flex justify-content-between align-items-start">
                                     <div class="me-auto">
                                         <div class="">
-                                            <a href="history.html" class="text-decoration-none text-dark"><i class="bi bi-clock-history text-success"></i> History Pesanan</a>
+                                            <a href="history.html" class="text-decoration-none text-dark"><i class="bi bi-clock-history text-primary"></i> History Pesanan</a>
                                         </div>
                                     </div>
                                 </li>
@@ -109,7 +109,7 @@
                                     <div class="card">
                                         <img src="image/produk1.jpeg" class="card-img-top" height="180" alt="Produk 1">
                                         <div class="card-body">
-                                            <h4 class="card-title"><a href="detailproduk.html">Produk 1</a></h4>
+                                            <h4 class="card-title"><a href="detailproduk.html" class="text-decoration-none text-dark">Produk 1</a></h4>
                                             <p>Status Pesanan : Dikirim</p>
                                         </div>
                                     </div>
@@ -118,7 +118,7 @@
                                     <div class="card">
                                         <img src="image/prouduk2.jpg" class="card-img-top" height="180" alt="Produk 2">
                                         <div class="card-body">
-                                            <h4 class="card-title"><a href="detailproduk.html">Produk 1</a></h4>
+                                            <h4 class="card-title"><a href="detailproduk.html" class="text-decoration-none text-dark">Produk 1</a></h4>
                                             <p>Status Pesanan : Dikirim</p>
                                         </div>
                                     </div>
@@ -127,7 +127,7 @@
                                     <div class="card">
                                         <img src="image/produk3.jpeg" class="card-img-top" height="180" alt="Produk 3">
                                         <div class="card-body">
-                                            <h4 class="card-title"><a href="detailproduk.html">Produk 1</a></h4>
+                                            <h4 class="card-title"><a href="detailproduk.html" class="text-decoration-none text-dark">Produk 1</a></h4>
                                             <p>Status Pesanan : Dikirim</p>
                                         </div>
                                     </div>
