--- a/userPage/index.html
+++ b/userPage/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg bg-hijau navbar-dark sticky-top">
+    <nav class="navbar navbar-expand-lg bg-warning navbar-dark sticky-top">
         <div class="container">
             <a class="navbar-brand" href="#"><b>Tokoku</b></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
@@ -28,7 +28,7 @@
                     <form class="d-flex" role="search">
                         <input class="form-control me-2" type="search" placeholder="Cari Produk..."
                             aria-label="Search">
-                        <!-- <button class="btn btn-outline-success" type="submit">Search</button> -->
+                        <!-- <button class="btn btn-outline-warning" type="submit">Search</button> -->
                     </form>
 
                 </div>
@@ -132,7 +132,7 @@
                                 <form class="d-flex" role="search">
                                     <input class="form-control me-2" type="search" placeholder="Cari Produk..."
                                         aria-label="Search">
-                                    <!-- <button class="btn btn-outline-success" type="submit">Search</button> -->
+                                    <!-- <button class="btn btn-outline-warning" type="submit">Search</button> -->
                                 </form>
             
                             </div>
@@ -141,9 +141,9 @@
                                     <div class="card">
                                         <img src="image/produk1.jpeg" class="card-img-top" height="180" alt="Produk 1">
                                         <div class="card-body">
-                                            <h4 class="card-title"><a href="detailproduk.html">Produk 1</a></h4>
+                                            <h4 class="card-title"><a href="detailproduk.html" class="text-decoration-none text-dark">Produk 1</a></h4>
                                             <p class="card-text">Rp.100.000,00</p>
-                                            <a href="beli.html" class="btn btn-success w-100"><i
+                                            <a href="beli.html" class="btn btn-warning w-100 text-white"><i
                                                     class="bi bi-bag-plus-fill me-1"></i>Beli</a>
                                         </div>
                                     </div>
@@ -152,9 +152,9 @@
                                     <div class="card">
                                         <img src="image/prouduk2.jpg" class="card-img-top" height="180" alt="Produk 2">
                                         <div class="card-body">
-                                            <h4 class="card-title"><a href="detailproduk.html">Produk 1</a></h4>
+                                            <h4 class="card-title"><a href="detailproduk.html" class="text-decoration-none text-dark">Produk 1</a></h4>
                                             <p class="card-text">Rp.100.000,00</p>
-                                            <a href="beli.html" class="btn btn-success w-100"><i
+                                            <a href="beli.html" class="btn btn-warning w-100 text-white"><i
                                                     class="bi bi-bag-plus-fill me-1"></i>Beli</a>
                                         </div>
                                     </div>
@@ -163,9 +163,9 @@
                                     <div class="card">
                                         <img src="image/produk3.jpeg" class="card-img-top" height="180" alt="Produk 3">
                                         <div class="card-body">
-                                            <h4 class="card-title"><a href="detailproduk.html">Produk 1</a></h4>
+                                            <h4 class="card-title"><a href="detailproduk.html" class="text-decoration-none text-dark">Produk 1</a></h4>
                                             <p class="card-text">Rp.100.000,00</p>
-                                            <a href="beli.html" class="btn btn-success w-100"><i
+                                            <a href="beli.html" class="btn btn-warning w-100 text-white"><i
                                                     class="bi bi-bag-plus-fill me-1"></i>Beli</a>
                                         </div>
                                     </div>
@@ -174,9 +174,9 @@
                                     <div class="card">
                                         <img src="image/produk1.jpeg" class="card-img-top" height="180" alt="Produk 1">
                                         <div class="card-body">
-                                            <h4 class="card-title"><a href="detailproduk.html">Produk 1</a></h4>
+                                            <h4 class="card-title"><a href="detailproduk.html" class="text-decoration-none text-dark">Produk 1</a></h4>
                                             <p class="card-text">Rp.100.000,00</p>
-                                            <a href="beli.html" class="btn btn-success w-100"><i
+                                            <a href="beli.html" class="btn btn-warning w-100 text-white"><i
                                                     class="bi bi-bag-plus-fill me-1"></i>Beli</a>
                                         </div>
                                     </div>
@@ -185,9 +185,9 @@
                                     <div class="card">
                                         <img src="image/prouduk2.jpg" class="card-img-top" height="180" alt="Produk 2">
                                         <div class="card-body">
-                                            <h4 class="card-title"><a href="detailproduk.html">Produk 1</a></h4>
+                                            <h4 class="card-title"><a href="detailproduk.html" class="text-decoration-none text-dark">Produk 1</a></h4>
                                             <p class="card-text">Rp.100.000,00</p>
-                                            <a href="beli.html" class="btn btn-success w-100"><i
+                                            <a href="beli.html" class="btn btn-warning w-100 text-white"><i
                                                     class="bi bi-bag-plus-fill me-1"></i>Beli</a>
                                         </div>
                                     </div>
@@ -196,9 +196,9 @@
                                     <div class="card">
                                         <img src="image/produk3.jpeg" class="card-img-top" height="180" alt="Produk 3">
                                         <div class="card-body">
-                                            <h4 class="card-title"><a href="detailproduk.html">Produk 1</a></h4>
+                                            <h4 class="card-title"><a href="detailproduk.html" class="text-decoration-none text-dark">Produk 1</a></h4>
                                             <p class="card-text">Rp.100.000,00</p>
-                                            <a href="beli.html" class="btn btn-success w-100"><i
+                                            <a href="beli.html" class="btn btn-warning w-100 text-white"><i
                                                     class="bi bi-bag-plus-fill me-1"></i>Beli</a>
                                         </div>
                                     </div>
@@ -207,9 +207,9 @@
                                     <div class="card">
                                         <img src="image/produk1.jpeg" class="card-img-top" height="180" alt="Produk 1">
                                         <div class="card-body">
-                                            <h4 class="card-title"><a href="detailproduk.html">Produk 1</a></h4>
+                                            <h4 class="card-title"><a href="detailproduk.html" class="text-decoration-none text-dark">Produk 1</a></h4>
                                             <p class="card-text">Rp.100.000,00</p>
-                                            <a href="beli.html" class="btn btn-success w-100"><i
+                                            <a href="beli.html" class="btn btn-warning w-100 text-white"><i
                                                     class="bi bi-bag-plus-fill me-1"></i>Beli</a>
                                         </div>
                                     </div>
@@ -218,9 +218,9 @@
                                     <div class="card">
                                         <img src="image/prouduk2.jpg" class="card-img-top" height="180" alt="Produk 2">
                                         <div class="card-body">
-                                            <h4 class="card-title"><a href="detailproduk.html">Produk 1</a></h4>
+                                            <h4 class="card-title"><a href="detailproduk.html" class="text-decoration-none text-dark">Produk 1</a></h4>
                                             <p class="card-text">Rp.100.000,00</p>
-                                            <a href="beli.html" class="btn btn-success w-100"><i
+                                            <a href="beli.html" class="btn btn-warning w-100 text-white"><i
                                                     class="bi bi-bag-plus-fill me-1"></i>Beli</a>
                                         </div>
                                     </div>
@@ -229,9 +229,9 @@
                                     <div class="card">
                                         <img src="image/produk3.jpeg" class="card-img-top" height="180" alt="Produk 3">
                                         <div class="card-body">
-                                            <h4 class="card-title"><a href="detailproduk.html">Produk 1</a></h4>
+                                            <h4 class="card-title"><a href="detailproduk.html" class="text-decoration-none text-dark">Produk 1</a></h4>
                                             <p class="card-text">Rp.100.000,00</p>
-                                            <a href="beli.html" class="btn btn-success w-100"><i
+                                            <a href="beli.html" class="btn btn-warning w-100 text-white"><i
                                                     class="bi bi-bag-plus-fill me-1"></i>Beli</a>
                                         </div>
                                     </div>
@@ -240,9 +240,9 @@
                                     <div class="card">
                                         <img src="image/produk1.jpeg" class="card-img-top" height="180" alt="Produk 1">
                                         <div class="card-body">
-                                            <h4 class="card-title"><a href="detailproduk.html">Produk 1</a></h4>
+                                            <h4 class="card-title"><a href="detailproduk.html" class="text-decoration-none text-dark">Produk 1</a></h4>
                                             <p class="card-text">Rp.100.000,00</p>
-                                            <a href="beli.html" class="btn btn-success w-100"><i
+                                            <a href="beli.html" class="btn btn-warning w-100 text-white"><i
                                                     class="bi bi-bag-plus-fill me-1"></i>Beli</a>
                                         </div>
                                     </div>
@@ -251,9 +251,9 @@
                                     <div class="card">
                                         <img src="image/prouduk2.jpg" class="card-img-top" height="180" alt="Produk 2">
                                         <div class="card-body">
-                                            <h4 class="card-title"><a href="detailproduk.html">Produk 1</a></h4>
+                                            <h4 class="card-title"><a href="detailproduk.html" class="text-decoration-none text-dark">Produk 1</a></h4>
                                             <p class="card-text">Rp.100.000,00</p>
-                                            <a href="beli.html" class="btn btn-success w-100"><i
+                                            <a href="beli.html" class="btn btn-warning w-100 text-white"><i
                                                     class="bi bi-bag-plus-fill me-1"></i>Beli</a>
                                         </div>
                                     </div>
@@ -262,9 +262,9 @@
                                     <div class="card">
                                         <img src="image/produk3.jpeg" class="card-img-top" height="180" alt="Produk 3">
                                         <div class="card-body">
-                                            <h4 class="card-title"><a href="detailproduk.html">Produk 1</a></h4>
+                                            <h4 class="card-title"><a href="detailproduk.html" class="text-decoration-none text-dark">Produk 1</a></h4>
                                             <p class="card-text">Rp.100.000,00</p>
-                                            <a href="beli.html" class="btn btn-success w-100"><i
+                                            <a href="beli.html" class="btn btn-warning w-100 text-white"><i
                                                     class="bi bi-bag-plus-fill me-1"></i>Beli</a>
                                         </div>
                                     </div>
@@ -306,7 +306,7 @@
         </div>
         <div class="bg-secondary py-3">
             <div class="container text-center">
-                <p>Hak Cipta &copy; 2023 Toko Online. Dibuat dengan <i class="fa fa-heart text-danger"></i> oleh <a
+                <p>Hak Cipta &copy; 2023 Toko Online. Dibuat dengan <i class="fa fa-heart text-warning"></i> oleh <a
                         href="#">Tokoku</a></p>
             </div>
         </div>
