--- a/userPage/login.html
+++ b/userPage/login.html
@@ -33,7 +33,7 @@
             font-size: 16px;
         }
 
-        .login-container .btn-success {
+        .login-container .btn-warning {
             width: 100%;
             height: 50px;
             font-size: 18px;
@@ -65,10 +65,10 @@
                  <div class="form-group mb-3">
                      <a href="forgot-password.html">Forgot Password?</a>
                  </div>
-                <button type="submit" class="btn btn-success">Login</button>
+                <button type="submit" class="btn btn-warning">Login</button>
             </form>
             <div class="mt-3">
-                <p>Don't have an account? <a class="text-success" href="register.html">Sign up</a></p>
+                <p>Don't have an account? <a class="text-warning" href="register.html">Sign up</a></p>
             </div>
         </div>
     </div>
