--- a/userPage/produkBygenre.html
+++ b/userPage/produkBygenre.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg bg-hijau navbar-dark sticky-top">
+    <nav class="navbar navbar-expand-lg bg-warning navbar-dark sticky-top">
         <div class="container">
             <a class="navbar-brand" href="#"><b>Tokoku</b></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
@@ -28,7 +28,7 @@
                     <form class="d-flex" role="search">
                         <input class="form-control me-2" type="search" placeholder="Cari Produk..."
                             aria-label="Search">
-                        <!-- <button class="btn btn-outline-success" type="submit">Search</button> -->
+                        <!-- <button class="btn btn-outline-warning" type="submit">Search</button> -->
                     </form>
 
                 </div>
@@ -109,7 +109,7 @@
                                 <form class="d-flex" role="search">
                                     <input class="form-control me-2" type="search" placeholder="Cari Produk..."
                                         aria-label="Search">
-                                    <!-- <button class="btn btn-outline-success" type="submit">Search</button> -->
+                                    <!-- <button class="btn btn-outline-warning" type="submit">Search</button> -->
                                 </form>
             
                             </div>
@@ -118,9 +118,9 @@
                                     <div class="card">
                                         <img src="image/produk1.jpeg" class="card-img-top" height="180" alt="Produk 1">
                                         <div class="card-body">
-                                            <h4 class="card-title"><a href="detailproduk.html">Produk 1</a></h4>
+                                            <h4 class="card-title"><a href="detailproduk.html" class="text-decoration-none text-dark">Produk 1</a></h4>
                                             <p class="card-text">Rp.100.000,00</p>
-                                            <a href="beli.html" class="btn btn-success w-100"><i
+                                            <a href="beli.html" class="btn btn-warning w-100 text-white"><i
                                                     class="bi bi-bag-plus-fill me-1"></i>Beli</a>
                                         </div>
                                     </div>
@@ -129,9 +129,9 @@
                                     <div class="card">
                                         <img src="image/prouduk2.jpg" class="card-img-top" height="180" alt="Produk 2">
                                         <div class="card-body">
-                                            <h4 class="card-title"><a href="detailproduk.html">Produk 1</a></h4>
+                                            <h4 class="card-title"><a href="detailproduk.html" class="text-decoration-none text-dark">Produk 1</a></h4>
                                             <p class="card-text">Rp.100.000,00</p>
-                                            <a href="beli.html" class="btn btn-success w-100"><i
+                                            <a href="beli.html" class="btn btn-warning w-100 text-white"><i
                                                     class="bi bi-bag-plus-fill me-1"></i>Beli</a>
                                         </div>
                                     </div>
@@ -140,9 +140,9 @@
                                     <div class="card">
                                         <img src="image/produk3.jpeg" class="card-img-top" height="180" alt="Produk 3">
                                         <div class="card-body">
-                                            <h4 class="card-title"><a href="detailproduk.html">Produk 1</a></h4>
+                                            <h4 class="card-title"><a href="detailproduk.html" class="text-decoration-none text-dark">Produk 1</a></h4>
                                             <p class="card-text">Rp.100.000,00</p>
-                                            <a href="beli.html" class="btn btn-success w-100"><i
+                                            <a href="beli.html" class="btn btn-warning w-100 text-white"><i
                                                     class="bi bi-bag-plus-fill me-1"></i>Beli</a>
                                         </div>
                                     </div>
@@ -151,9 +151,9 @@
                                     <div class="card">
                                         <img src="image/produk1.jpeg" class="card-img-top" height="180" alt="Produk 1">
                                         <div class="card-body">
-                                            <h4 class="card-title"><a href="detailproduk.html">Produk 1</a></h4>
+                                            <h4 class="card-title"><a href="detailproduk.html" class="text-decoration-none text-dark">Produk 1</a></h4>
                                             <p class="card-text">Rp.100.000,00</p>
-                                            <a href="beli.html" class="btn btn-success w-100"><i
+                                            <a href="beli.html" class="btn btn-warning w-100 text-white"><i
                                                     class="bi bi-bag-plus-fill me-1"></i>Beli</a>
                                         </div>
                                     </div>
@@ -162,9 +162,9 @@
                                     <div class="card">
                                         <img src="image/prouduk2.jpg" class="card-img-top" height="180" alt="Produk 2">
                                         <div class="card-body">
-                                            <h4 class="card-title"><a href="detailproduk.html">Produk 1</a></h4>
+                                            <h4 class="card-title"><a href="detailproduk.html" class="text-decoration-none text-dark">Produk 1</a></h4>
                                             <p class="card-text">Rp.100.000,00</p>
-                                            <a href="beli.html" class="btn btn-success w-100"><i
+                                            <a href="beli.html" class="btn btn-warning w-100 text-white"><i
                                                     class="bi bi-bag-plus-fill me-1"></i>Beli</a>
                                         </div>
                                     </div>
@@ -173,9 +173,9 @@
                                     <div class="card">
                                         <img src="image/produk3.jpeg" class="card-img-top" height="180" alt="Produk 3">
                                         <div class="card-body">
-                                            <h4 class="card-title"><a href="detailproduk.html">Produk 1</a></h4>
+                                            <h4 class="card-title"><a href="detailproduk.html" class="text-decoration-none text-dark">Produk 1</a></h4>
                                             <p class="card-text">Rp.100.000,00</p>
-                                            <a href="beli.html" class="btn btn-success w-100"><i
+                                            <a href="beli.html" class="btn btn-warning w-100 text-white"><i
                                                     class="bi bi-bag-plus-fill me-1"></i>Beli</a>
                                         </div>
                                     </div>
@@ -184,9 +184,9 @@
                                     <div class="card">
                                         <img src="image/produk1.jpeg" class="card-img-top" height="180" alt="Produk 1">
                                         <div class="card-body">
-                                            <h4 class="card-title"><a href="detailproduk.html">Produk 1</a></h4>
+                                            <h4 class="card-title"><a href="detailproduk.html" class="text-decoration-none text-dark">Produk 1</a></h4>
                                             <p class="card-text">Rp.100.000,00</p>
-                                            <a href="beli.html" class="btn btn-success w-100"><i
+                                            <a href="beli.html" class="btn btn-warning w-100 text-white"><i
                                                     class="bi bi-bag-plus-fill me-1"></i>Beli</a>
                                         </div>
                                     </div>
@@ -195,9 +195,9 @@
                                     <div class="card">
                                         <img src="image/prouduk2.jpg" class="card-img-top" height="180" alt="Produk 2">
                                         <div class="card-body">
-                                            <h4 class="card-title"><a href="detailproduk.html">Produk 1</a></h4>
+                                            <h4 class="card-title"><a href="detailproduk.html" class="text-decoration-none text-dark">Produk 1</a></h4>
                                             <p class="card-text">Rp.100.000,00</p>
-                                            <a href="beli.html" class="btn btn-success w-100"><i
+                                            <a href="beli.html" class="btn btn-warning w-100 text-white"><i
                                                     class="bi bi-bag-plus-fill me-1"></i>Beli</a>
                                         </div>
                                     </div>
@@ -206,9 +206,9 @@
                                     <div class="card">
                                         <img src="image/produk3.jpeg" class="card-img-top" height="180" alt="Produk 3">
                                         <div class="card-body">
-                                            <h4 class="card-title"><a href="detailproduk.html">Produk 1</a></h4>
+                                            <h4 class="card-title"><a href="detailproduk.html" class="text-decoration-none text-dark">Produk 1</a></h4>
                                             <p class="card-text">Rp.100.000,00</p>
-                                            <a href="beli.html" class="btn btn-success w-100"><i
+                                            <a href="beli.html" class="btn btn-warning w-100 text-white"><i
                                                     class="bi bi-bag-plus-fill me-1"></i>Beli</a>
                                         </div>
                                     </div>
@@ -217,9 +217,9 @@
                                     <div class="card">
                                         <img src="image/produk1.jpeg" class="card-img-top" height="180" alt="Produk 1">
                                         <div class="card-body">
-                                            <h4 class="card-title"><a href="detailproduk.html">Produk 1</a></h4>
+                                            <h4 class="card-title"><a href="detailproduk.html" class="text-decoration-none text-dark">Produk 1</a></h4>
                                             <p class="card-text">Rp.100.000,00</p>
-                                            <a href="beli.html" class="btn btn-success w-100"><i
+                                            <a href="beli.html" class="btn btn-warning w-100 text-white"><i
                                                     class="bi bi-bag-plus-fill me-1"></i>Beli</a>
                                         </div>
                                     </div>
@@ -228,9 +228,9 @@
                                     <div class="card">
                                         <img src="image/prouduk2.jpg" class="card-img-top" height="180" alt="Produk 2">
                                         <div class="card-body">
-                                            <h4 class="card-title"><a href="detailproduk.html">Produk 1</a></h4>
+                                            <h4 class="card-title"><a href="detailproduk.html" class="text-decoration-none text-dark">Produk 1</a></h4>
                                             <p class="card-text">Rp.100.000,00</p>
-                                            <a href="beli.html" class="btn btn-success w-100"><i
+                                            <a href="beli.html" class="btn btn-warning w-100 text-white"><i
                                                     class="bi bi-bag-plus-fill me-1"></i>Beli</a>
                                         </div>
                                     </div>
@@ -239,9 +239,9 @@
                                     <div class="card">
                                         <img src="image/produk3.jpeg" class="card-img-top" height="180" alt="Produk 3">
                                         <div class="card-body">
-                                            <h4 class="card-title"><a href="detailproduk.html">Produk 1</a></h4>
+                                            <h4 class="card-title"><a href="detailproduk.html" class="text-decoration-none text-dark">Produk 1</a></h4>
                                             <p class="card-text">Rp.100.000,00</p>
-                                            <a href="beli.html" class="btn btn-success w-100"><i
+                                            <a href="beli.html" class="btn btn-warning w-100 text-white"><i
                                                     class="bi bi-bag-plus-fill me-1"></i>Beli</a>
                                         </div>
                                     </div>
