--- a/userPage/profile.html
+++ b/userPage/profile.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg bg-hijau navbar-dark sticky-top">
+    <nav class="navbar navbar-expand-lg bg-warning navbar-dark sticky-top">
         <div class="container">
             <a class="navbar-brand" href="#"><b>Tokoku</b></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
@@ -28,7 +28,7 @@
                     <form class="d-flex" role="search">
                         <input class="form-control me-2" type="search" placeholder="Cari Produk..."
                             aria-label="Search">
-                        <!-- <button class="btn btn-outline-success" type="submit">Search</button> -->
+                        <!-- <button class="btn btn-outline-primary" type="submit">Search</button> -->
                     </form>
 
                 </div>
@@ -70,28 +70,28 @@
                                 <li class="list-group-item d-flex justify-content-between align-items-start">
                                     <div class="me-auto">
                                         <div class="">
-                                            <a href="profileSetting.html" class="text-decoration-none text-dark"><i class="bi bi-person-gear text-success"></i> Profile Settings</a>
+                                            <a href="profile.html" class="text-decoration-none text-dark"><i class="bi bi-person-gear text-primary"></i> Profile Settings</a>
                                         </div>
                                     </div>
                                 </li>
                                 <li class="list-group-item d-flex justify-content-between align-items-start">
                                     <div class="me-auto">
                                         <div class="">
-                                            <a href="ubahPassword.html" class="text-decoration-none text-dark"><i class="bi bi-shield-lock-fill text-success"></i> Keamanan</a>
+                                            <a href="ubahPassword.html" class="text-decoration-none text-dark"><i class="bi bi-shield-lock-fill text-primary"></i> Keamanan</a>
                                         </div>
                                     </div>
                                 </li>
                                 <li class="list-group-item d-flex justify-content-between align-items-start">
                                     <div class="me-auto">
                                         <div class="">
-                                            <a href="pesanan.html" class="text-decoration-none text-dark"><i class="bi bi-cart-fill text-success"></i> Pesanan Saya</a>
+                                            <a href="pesanan.html" class="text-decoration-none text-dark"><i class="bi bi-cart-fill text-primary"></i> Pesanan Saya</a>
                                         </div>
                                     </div>
                                 </li>
                                 <li class="list-group-item d-flex justify-content-between align-items-start">
                                     <div class="me-auto">
                                         <div class="">
-                                            <a href="history.html" class="text-decoration-none text-dark"><i class="bi bi-clock-history text-success"></i> History Pesanan</a>
+                                            <a href="history.html" class="text-decoration-none text-dark"><i class="bi bi-clock-history text-primary"></i> History Pesanan</a>
                                         </div>
                                     </div>
                                 </li>
@@ -125,7 +125,7 @@
                                             <input type="file" name="" class="form-control" id="">
                                         </div>
                                         <div class="mb-3">
-                                            <button class="btn btn-success">Simpan</button>
+                                            <button class="btn btn-warning">Simpan</button>
                                         </div>
                                     </form>
                                 </div>
