--- a/userPage/register.html
+++ b/userPage/register.html
@@ -33,7 +33,7 @@
             font-size: 16px;
         }
 
-        .registration-container .btn-success {
+        .registration-container .btn-warning {
             width: 100%;
             height: 50px;
             font-size: 18px;
@@ -59,7 +59,7 @@
                 <div class="form-group mb-3">
                     <input type="password" class="form-control" id="confirmPassword" placeholder="Confirm Password">
                 </div>
-                <button type="submit" class="btn btn-success">Register</button>
+                <button type="submit" class="btn btn-warning">Register</button>
             </form>
         </div>
     </div>
