--- a/userPage/tentangkami.html
+++ b/userPage/tentangkami.html
@@ -57,74 +57,25 @@
     </nav>
 
 
-    <div class="container my-4">
-        <h1>Transaksi</h1>
+    <section class="container mt-4 mb-3">
         <div class="row">
-            <div class="col-md-8">
-                <div class="card">
-                    <div class="card-body">
-                        <h5 class="card-title">Pembelian Sukses</h5>
-                        <p class="card-text">Terima kasih telah melakukan pembelian di Tokoku. Nomor transaksi Anda
-                            adalah
-                            123456789.</p>
-                        <div class="my-4">
-                            <h6>Alamat Pengiriman</h6>
-                            <div class="card">
-                                <div class="card-body">
-                                    Rafi Gusti - Tegallurung,Gilangharjo,Pandak,Bantu,Yogyakarta
-                                </div>
-                            </div>
-                        </div>
-                        <h6>Detail transaksi:</h6>
-                        <ul class="list-group">
-                            <li class="list-group-item">
-                                <div class="card mb-3">
-                                    <div class="row g-0">
-                                        <div class="col-md-4">
-                                            <img src="image/produk1.jpeg" class="img-fluid rounded-start" alt="...">
-                                        </div>
-                                        <div class="col-md-8">
-                                            <div class="card-body">
-                                                <h5 class="card-title">TV LG HD</h5>
-                                                <p>Rp.100.000,00</p>
-                                                <p>Jumlah: 2</p>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </li>
-                        </ul>
-                    </div>
+            <div class="col-lg-8 offset-lg-2">
+                <div class="text-center section-heading">
+                    <h2>Tentang Kami</h2>
+                    <p>Kami adalah toko online yang menyediakan berbagai macam produk berkualitas dengan harga terjangkau.</p>
                 </div>
-            </div>
-            <div class="col-md-4">
-                <div class="card mb-3">
-                    <div class="card-body">
-                        <h5 class="card-title">Ringkasan</h5>
-                        <ul class="list-group">
-                            <li class="list-group-item d-flex justify-content-between align-items-start">
-                                Subtotal
-                                <p>Rp.200.000,00</p>
-                            </li>
-                            <li class="list-group-item d-flex justify-content-between align-items-start">
-                                Ongkos Kirim
-                                <p>Rp.10.000,00</p>
-                            </li>
-                            <li class="list-group-item d-flex justify-content-between align-items-start">
-                                Total
-                                <p>Rp.210.000,00</p>
-                            </li>
-                            <div class="mt-4">
-                                <a href="payment.html">
-                                    <button class="btn btn-warning w-100">Check Out</button>
-                                </a>
-                            </div>
-                        </ul>
-                    </div>
+                <div class="section-content">
+                    <h4>Visi</h4>
+                    <p>Visi kami adalah menjadi toko online terkemuka yang menyediakan produk berkualitas dan memberikan kepuasan kepada pelanggan.</p>
+                    <h4>Misi</h4>
+                    <p>Misi kami adalah menyediakan produk dengan kualitas terbaik, pelayanan yang ramah, dan pengiriman yang cepat demi kepuasan pelanggan.</p>
+                </div>
+                <div class="text-center mt-4">
+                    <a href="index.html" class="btn btn-warning text-white">Lihat Produk Kami</a>
                 </div>
             </div>
         </div>
-    </div>
+    </section>
 
     <footer class="bg-dark text-light">
         <div class="container py-5">
@@ -155,7 +106,7 @@
         </div>
         <div class="bg-secondary py-3">
             <div class="container text-center">
-                <p>Hak Cipta &copy; 2023 Toko Online. Dibuat dengan <i class="fa fa-heart text-danger"></i> oleh <a
+                <p>Hak Cipta &copy; 2023 Toko Online. Dibuat dengan <i class="fa fa-heart text-warning"></i> oleh <a
                         href="#">Tokoku</a></p>
             </div>
         </div>
