--- a/dashboard/profile.html
+++ b/dashboard/profile.html
@@ -187,7 +187,7 @@
                 </div>
                 <div class="mt-5">
                     <div class="row">
-                        <div class="col-4 border border-success rounded">
+                        <div class="col-12 col-md-4 mb-3 px-3 border border-success rounded">
                             <div class="text-center p-4">
                                 <img src="images/profile/12.png" class="rounded-circle" alt="" />
                             </div>
@@ -196,7 +196,7 @@
                                 <p>admin123xyz@gmail.com</p>
                             </div>
                         </div>
-                        <div class="col-8">
+                        <div class="col-md-8 col-12 mb-3">
                             <div class="custom-tab-1">
                                 <ul class="nav nav-tabs">
                                     <li class="nav-item">
