--- a/userPage/detailhistory.html
+++ b/userPage/detailhistory.html
@@ -12,6 +12,32 @@
         .bg-hijau {
             background-color: #2bc155;
         }
+
+
+        swiper-container {
+            width: 100%;
+            height: 100%;
+        }
+
+        swiper-slide {
+            text-align: center;
+            font-size: 18px;
+            background: #fff;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        swiper-slide img {
+            display: block;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+
+        .cursor {
+            cursor: pointer;
+        }
     </style>
 </head>
 
@@ -29,7 +55,7 @@
                         <input class="form-control me-2" type="search" placeholder="Cari Produk..." aria-label="Search">
                         <!-- <button class="btn btn-outline-success" type="submit">Search</button> -->
                     </form>
-    
+
                 </div>
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
@@ -72,28 +98,32 @@
                                 <li class="list-group-item d-flex justify-content-between align-items-start">
                                     <div class="me-auto">
                                         <div class="">
-                                            <a href="profile.html" class="text-decoration-none text-dark"><i class="bi bi-person-gear text-primary"></i> Profile Settings</a>
+                                            <a href="profile.html" class="text-decoration-none text-dark"><i
+                                                    class="bi bi-person-gear text-primary"></i> Profile Settings</a>
                                         </div>
                                     </div>
                                 </li>
                                 <li class="list-group-item d-flex justify-content-between align-items-start">
                                     <div class="me-auto">
                                         <div class="">
-                                            <a href="ubahPassword.html" class="text-decoration-none text-dark"><i class="bi bi-shield-lock-fill text-primary"></i> Keamanan</a>
+                                            <a href="ubahPassword.html" class="text-decoration-none text-dark"><i
+                                                    class="bi bi-shield-lock-fill text-primary"></i> Keamanan</a>
                                         </div>
                                     </div>
                                 </li>
                                 <li class="list-group-item d-flex justify-content-between align-items-start">
                                     <div class="me-auto">
                                         <div class="">
-                                            <a href="pesanan.html" class="text-decoration-none text-dark"><i class="bi bi-cart-fill text-primary"></i> Pesanan Saya</a>
+                                            <a href="pesanan.html" class="text-decoration-none text-dark"><i
+                                                    class="bi bi-cart-fill text-primary"></i> Pesanan Saya</a>
                                         </div>
                                     </div>
                                 </li>
                                 <li class="list-group-item d-flex justify-content-between align-items-start">
                                     <div class="me-auto">
                                         <div class="">
-                                            <a href="history.html" class="text-decoration-none text-dark"><i class="bi bi-clock-history text-primary"></i> History Pesanan</a>
+                                            <a href="history.html" class="text-decoration-none text-dark"><i
+                                                    class="bi bi-clock-history text-primary"></i> History Pesanan</a>
                                         </div>
                                     </div>
                                 </li>
@@ -105,34 +135,23 @@
                     <!-- Konten Utama -->
                     <div class="card mb-3">
                         <div class="card-body">
-                            <h5 class="card-title">Pesanan Saya</h5>
+                            <h5 class="card-title">Detail Pesanan</h5>
                             <div class="row mt-3">
-                                <div class="col-md-4 mt-3">
-                                    <div class="card">
-                                        <img src="image/produk1.jpeg" class="card-img-top" height="180" alt="Produk 1">
-                                        <div class="card-body">
-                                            <h4 class="card-title"><a href="detailproduk.html" class="text-decoration-none text-dark">Produk 1</a></h4>
-                                            <p>Status Pesanan : Dikirim</p>
-                                        </div>
-                                    </div>
+                                <div class="col-12 col-sm-6 mb-3">
+                                    <swiper-container class="mySwiper" pagination="true" pagination-type="fraction">
+                                        <swiper-slide><img src="image/produk1.jpeg" alt=""></swiper-slide>
+                                        <swiper-slide><img src="image/prouduk2.jpg" alt=""></swiper-slide>
+                                        <swiper-slide><img src="image/produk3.jpeg" alt=""></swiper-slide>
+                                    </swiper-container>
                                 </div>
-                                <div class="col-md-4 mt-3">
-                                    <div class="card">
-                                        <img src="image/prouduk2.jpg" class="card-img-top" height="180" alt="Produk 2">
-                                        <div class="card-body">
-                                            <h4 class="card-title"><a href="detailproduk.html" class="text-decoration-none text-dark">Produk 1</a></h4>
-                                            <p>Status Pesanan : Dikirim</p>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-md-4 mt-3">
-                                    <div class="card">
-                                        <img src="image/produk3.jpeg" class="card-img-top" height="180" alt="Produk 3">
-                                        <div class="card-body">
-                                            <h4 class="card-title"><a href="detailproduk.html" class="text-decoration-none text-dark">Produk 1</a></h4>
-                                            <p>Status Pesanan : Dikirim</p>
-                                        </div>
-                                    </div>
+                                <div class="col-12 col-sm-6">
+                                    <h4>kaos import lengan pendek pria | baju pria import polos kaos - Putih</h4>
+                                    <p class="pt-4">Total Pesanan : 5</p>
+                                    <p class="pt-4">Total pembayaran :Rp.100.000,00</p>
+                                    <p class="pt-4">Metode pembayaran : Transfer Bank BCA</p>
+                                    <p class="pt-4">Status : <span class="badge bg-primary rounded-pill">Dikirim</span></p>
+                                    <p class="pt-4">Tanggal Pemesanan : 11 Juni 2023 </p>
+                                    <a href="beli.html" class="btn btn-warning text-white mt-2">Beli Lagi</a>
                                 </div>
                             </div>
                         </div>
@@ -180,6 +199,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous">
     </script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-element-bundle.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </body>
 
 </html>
