--- a/userPage/detailproduk.html
+++ b/userPage/detailproduk.html
@@ -57,9 +57,9 @@
                 <div class="ms-auto d-none d-lg-block">
                     <form class="d-flex" role="search">
                         <input class="form-control me-2" type="search" placeholder="Cari Produk..." aria-label="Search">
-                        <!-- <button class="btn btn-outline-warning" type="submit">Search</button> -->
+                        <!-- <button class="btn btn-outline-success" type="submit">Search</button> -->
                     </form>
-
+    
                 </div>
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
@@ -77,6 +77,9 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="history.html">History</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="tentangkami.html">Tentang Kami</a>
                     </li>
                 </ul>
             </div>
@@ -141,7 +144,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="cohijaul-12 col-md-3 mt-2">
+                                <div class="col-12 col-md-3 mt-2">
                                     <div class="card border-warning mb-3" >
                                         <div class="card-header mb-4">
                                             <h6><b>Atur jumlah dan catatan</b></h6>
