--- a/userPage/history.html
+++ b/userPage/history.html
@@ -26,11 +26,10 @@
             <div class="collapse navbar-collapse" id="navbarText">
                 <div class="ms-auto d-none d-lg-block">
                     <form class="d-flex" role="search">
-                        <input class="form-control me-2" type="search" placeholder="Cari Produk..."
-                            aria-label="Search">
-                        <!-- <button class="btn btn-outline-warning" type="submit">Search</button> -->
+                        <input class="form-control me-2" type="search" placeholder="Cari Produk..." aria-label="Search">
+                        <!-- <button class="btn btn-outline-success" type="submit">Search</button> -->
                     </form>
-
+    
                 </div>
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
@@ -48,6 +47,9 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="history.html">History</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="tentangkami.html">Tentang Kami</a>
                     </li>
                 </ul>
             </div>
@@ -110,6 +112,7 @@
                                         <img src="image/produk1.jpeg" class="card-img-top" height="180" alt="Produk 1">
                                         <div class="card-body">
                                             <h4 class="card-title"><a href="detailproduk.html" class="text-decoration-none text-dark">Produk 1</a></h4>
+                                            <a href="detailhistory.html" class="btn btn-warning w-100 text-white">Lihat Detail</a>
                                         </div>
                                     </div>
                                 </div>
@@ -118,6 +121,7 @@
                                         <img src="image/prouduk2.jpg" class="card-img-top" height="180" alt="Produk 2">
                                         <div class="card-body">
                                             <h4 class="card-title"><a href="detailproduk.html" class="text-decoration-none text-dark">Produk 1</a></h4>
+                                            <a href="detailhistory.html" class="btn btn-warning w-100 text-white">Lihat Detail</a>
                                         </div>
                                     </div>
                                 </div>
@@ -126,6 +130,7 @@
                                         <img src="image/produk3.jpeg" class="card-img-top" height="180" alt="Produk 3">
                                         <div class="card-body">
                                             <h4 class="card-title"><a href="detailproduk.html" class="text-decoration-none text-dark">Produk 1</a></h4>
+                                            <a href="detailhistory.html" class="btn btn-warning w-100 text-white">Lihat Detail</a>
                                         </div>
                                     </div>
                                 </div>
