--- a/userPage/index.html
+++ b/userPage/index.html
@@ -26,11 +26,10 @@
             <div class="collapse navbar-collapse" id="navbarText">
                 <div class="ms-auto d-none d-lg-block">
                     <form class="d-flex" role="search">
-                        <input class="form-control me-2" type="search" placeholder="Cari Produk..."
-                            aria-label="Search">
-                        <!-- <button class="btn btn-outline-warning" type="submit">Search</button> -->
+                        <input class="form-control me-2" type="search" placeholder="Cari Produk..." aria-label="Search">
+                        <!-- <button class="btn btn-outline-success" type="submit">Search</button> -->
                     </form>
-
+    
                 </div>
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
@@ -48,6 +47,9 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="history.html">History</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="tentangkami.html">Tentang Kami</a>
                     </li>
                 </ul>
             </div>
