--- a/userPage/pelunasan.html
+++ b/userPage/pelunasan.html
@@ -29,7 +29,7 @@
                         <input class="form-control me-2" type="search" placeholder="Cari Produk..." aria-label="Search">
                         <!-- <button class="btn btn-outline-success" type="submit">Search</button> -->
                     </form>
-    
+
                 </div>
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
@@ -58,18 +58,50 @@
 
 
     <div class="container my-4">
-        <h4><a href="index.html"><i class="bi bi-arrow-left text-dark"></i></a> Ringkasan Pemesanan</h4>
+        <h4><a href="index.html"><i class="bi bi-arrow-left text-dark"></i></a> Detail pembayaran</h4>
         <div class="row mt-4">
-            <div class="col-md-3">
-                <div class="alert alert-danger text-center">
-                    <p>Bank / ATM transfer</p>
+            <div class="col-md-7">
+                <div class="alert alert-danger">
+                    <p>Silahkan Lunasi Pembayaran <b>27 menit 3 detik</b> utuk menghindari pembatalan</p>
+                    <p>Terima kasih telah melakukan pemesanan,silahkan lakukan pembayaran</p>
                 </div>
-            </div>
-            <div class="col-md-5">
-                <div class="alert alert-success text-center">
-                    <p>Jumlah total yang harus dibayar <b>Rp.200.000,00</b></p>
+                <div class="card my-3">
+                    <div class="card-body">
+                        <h6><img src="image/bank/BCA.png" alt="" width="48px">
+                            Bank Central Asia (BCA)</h6>
+                        <hr style="padding: 1px;">
+                        <table width="100%">
+                            <tbody>
+                                <tr>
+                                    <td>Virtual Account Number</td>
+                                    <td>Jumlah yang harus Dibayar</td>
+                                    <td>Reference Number</td>
+                                </tr>
+                                <tr class="capee">
+                                    <td><span id="norek">43423424221</span>
+                                    </td>
+                                    <td>Rp. 3,817,700</td>
+                                    <td>YQZ4xh</td>
+                                </tr>
+
+                            </tbody>
+                        </table>
+                        <hr style=" padding: 1px;">
+                        <ul class="text-black" style="font-size: 15px;">
+                            <li> When you have successfully completed your payment, we will confirm your
+                                booking within
+                                few
+                                minutes through mail and SMS</li>
+                            <li> In case you do not receive booking voucher after successful payment,
+                                you can contact us
+                                +62-21-806-29666 for further assistance</li>
+
+                        </ul>
+                    </div>
                 </div>
+
                 <div class="mt-3">
+                    <h4>Payment Instructions</h4>
                     <div class="accordion accordion-flush" id="accordionFlushExample">
                         <div class="accordion-item border border-black mb-3">
                             <h2 class="accordion-header">
@@ -77,8 +109,7 @@
                                     data-bs-target="#flush-collapseOne" aria-expanded="false"
                                     aria-controls="flush-collapseOne">
                                     <div class="d-flex">
-                                        <img src="image/bank/BCA.png" alt="" class="ms-1" width="48px">
-                                        <b>Bank BCA</b>
+                                        <b>ATM</b>
                                     </div>
                                 </button>
                             </h2>
@@ -91,9 +122,6 @@
                                         <li>Pemesanan akan dilakukan di langkah berikutya</li>
                                         <li>Anda dapat menemukan semua petunjuk terkait untuk pembayaran bank anda</li>
                                     </ul>
-                                    <div class="text-end">
-                                        <a href="pelunasan.html" class="btn btn-danger">Bayar</a>
-                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -103,8 +131,7 @@
                                     data-bs-target="#flush-collapseTwo" aria-expanded="false"
                                     aria-controls="flush-collapseTwo">
                                     <div class="d-flex">
-                                        <img src="image/bank/bni.png" alt="" class="ms-1" width="48px">
-                                        <b>Bank BNI</b>
+                                        <b>Internet Banking</b>
                                     </div>
                                 </button>
                             </h2>
@@ -117,9 +144,6 @@
                                         <li>Pemesanan akan dilakukan di langkah berikutya</li>
                                         <li>Anda dapat menemukan semua petunjuk terkait untuk pembayaran bank anda</li>
                                     </ul>
-                                    <div class="text-end">
-                                        <a href="pelunasan.html" class="btn btn-danger">Bayar</a>
-                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -129,8 +153,7 @@
                                     data-bs-target="#flush-collapseThree" aria-expanded="false"
                                     aria-controls="flush-collapseThree">
                                     <div class="d-flex">
-                                        <img src="image/bank/madiri.png" alt="" class="ms-1" width="48px">
-                                        <b>Bank Mandiri</b>
+                                        <b>Mobile banking</b>
                                     </div>
                                 </button>
                             </h2>
@@ -143,16 +166,13 @@
                                         <li>Pemesanan akan dilakukan di langkah berikutya</li>
                                         <li>Anda dapat menemukan semua petunjuk terkait untuk pembayaran bank anda</li>
                                     </ul>
-                                    <div class="text-end">
-                                        <a href="pelunasan.html" class="btn btn-danger">Bayar</a>
-                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-5">
                 <div class="card ">
                     <div class="card-body">
                         <div class="row g-0">
