--- a/userPage/profile.html
+++ b/userPage/profile.html
@@ -26,11 +26,10 @@
             <div class="collapse navbar-collapse" id="navbarText">
                 <div class="ms-auto d-none d-lg-block">
                     <form class="d-flex" role="search">
-                        <input class="form-control me-2" type="search" placeholder="Cari Produk..."
-                            aria-label="Search">
-                        <!-- <button class="btn btn-outline-primary" type="submit">Search</button> -->
+                        <input class="form-control me-2" type="search" placeholder="Cari Produk..." aria-label="Search">
+                        <!-- <button class="btn btn-outline-success" type="submit">Search</button> -->
                     </form>
-
+    
                 </div>
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
@@ -48,6 +47,9 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="history.html">History</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="tentangkami.html">Tentang Kami</a>
                     </li>
                 </ul>
             </div>
@@ -105,10 +107,10 @@
                         <div class="card-body">
                             <h5 class="card-title">Profile</h5>
                             <div class="row">
-                                <div class="col-5">
+                                <div class="col-md-5 col-12 mb-3">
                                     <img src="image/profile.jpg" class="" alt="">
                                 </div>
-                                <div class="col-7">
+                                <div class="col-md-7 col-12">
                                     <h6>Edit Profile</h6>
                                     <form action="" method="get">
                                         <div class="mb-3">
